--- a/src/www/index.html
+++ b/src/www/index.html
@@ -118,6 +118,7 @@
                 <button>Buscar</button>
             </div>
         </main>
+        <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
         <script  type="module" src=js/controlador/app.js></script> 
     </body>
 </html>
