--- a/src/www/index.html
+++ b/src/www/index.html
@@ -120,6 +120,7 @@
         </main>
         <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+        <script src="https://d3js.org/d3.v7.min.js"></script>
         <script  type="module" src=js/controlador/app.js></script> 
     </body>
 </html>
